Add matchup notes page

--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-html {
-	background-color: B2BAE4;
-}
-
 body {
+	background-color: #FDFDFD;
 	font-family: sans-serif;
 	margin-left: 7%;
 	margin-right: 7%;
