--- a/style.css
+++ b/style.css
@@ -12,3 +12,13 @@ p, h1, h2, h3, h4, li {
 .combo {
 	margin-bottom: 0.3em;
 }
+
+table {
+  border-collapse: collapse;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
